Refactoring UMLView

Fix centering of scene view after scroll wheel zoom or window resize.
Remove internal properties for zoom level and center point.
Instead of them get actual value from matrix().m11().
Remove unnecesary and dupliicate methods.
Fix setting of zoom in diagram properties page.

BUG:358097
FIXED-IN:2.18.2 (KDE Applications 15.12.2)
REVIEW:126773