umbrello/umlview.h
@@ -42,7 +42,6 @@ public:
 
     int zoom() const ;
     void setZoom(int zoom);
-    int currentZoom();
 
     virtual bool showPropertiesDialog(QWidget *parent = 0);
 
@@ -53,18 +52,10 @@ public slots:
 
 protected:
     virtual void wheelEvent(QWheelEvent* event);
-    virtual void resizeEvent(QResizeEvent* event);
     virtual void showEvent(QShowEvent *se);
     virtual void hideEvent(QHideEvent *he);
-    virtual void closeEvent(QCloseEvent* ce);
     virtual void mousePressEvent(QMouseEvent* event);
     virtual void mouseReleaseEvent(QMouseEvent* event);
-
-    void setCenter(const QPointF& centerPoint);
-    QPointF center();
-
-    QPointF m_currentCenterPoint;  ///< holds the current centerpoint for the view, used for panning and zooming
-    int m_nZoom;        ///< zoom level in percent, default 100
 };
 
 #endif // UMLVIEW_H
